--- a/Lab1.cabal
+++ b/Lab1.cabal
@@ -19,7 +19,7 @@ executable Lab1
   main-is:             Main.hs
   other-modules:       FCM
   -- other-extensions:    
-  build-depends:       base >=4.8 && <4.9,vector,random,matrix
+  build-depends:       base >=4.8 && <4.9,vector,random,matrix,optparse-applicative
   hs-source-dirs:      src
   default-language:    Haskell2010
   ghc-options:	       -W
