--- a/Lab1.cabal
+++ b/Lab1.cabal
@@ -23,3 +23,12 @@ executable Lab1
   hs-source-dirs:      src
   default-language:    Haskell2010
   ghc-options:	       -W
+
+executable Test
+  main-is:             Tests.hs
+  other-modules:       FCM,CsvParser,Types,CmdArgumentsParser
+  -- other-extensions:    
+  build-depends:       base >=4.8 && <4.9,vector,random,matrix,split,optparse-applicative, cassava, bytestring, HUnit
+  hs-source-dirs:      src
+  default-language:    Haskell2010
+  ghc-options:	       -W
